--- a/SlackNewsBot.Api/Properties/launchSettings.json
+++ b/SlackNewsBot.Api/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/test",
+      "launchUrl": "/api/ping",
       "environmentVariables": {
         "ASPNET_ENV": "Development"
       }
