--- a/SlackNewsBot.Api/project.json
+++ b/SlackNewsBot.Api/project.json
@@ -16,7 +16,9 @@
     "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
-    "Newtonsoft.Json": "8.0.3"
+    "Microsoft.Net.Http.Client": "1.0.0-beta8-15501",
+    "Newtonsoft.Json": "8.0.3",
+    "System.Xml.XDocument": "4.0.11-beta-23516"
   },
 
   "commands": {
@@ -24,7 +26,9 @@
   },
 
   "frameworks": {
-    "dnx451": { },
+    "dnx451": {
+      "dependencies": {      }
+    },
     "dnxcore50": { }
   },
 
