--- a/SlackNewsBot.Api/project.json
+++ b/SlackNewsBot.Api/project.json
@@ -16,7 +16,7 @@
     "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
-    "Microsoft.Net.Http.Client": "1.0.0-beta8-15501",
+    "Microsoft.Net.Http.Client": "1.0.0-beta6",
     "Newtonsoft.Json": "8.0.3",
     "System.Xml.XDocument": "4.0.11-beta-23516"
   },
